Login, Signup Functionality added using Firebase Admin SDK

--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -9,7 +9,7 @@
       type="text"
       placeholder="Enter Name"
       name="name"
-      [(ngModel)]="user.userName"
+      [(ngModel)]="user.name"
       required
     />
 
